--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
 version: "3.8"
 
 services:
-    master_branch:
-      image: navyarangu/mywebclass:master
-      container_name: master_branch
+    master:
+      image:  navyarangu/mywebclass:master
+      deploy:
+        replicas: 2
       pull_policy: always
       restart: always
       ports:
-      - "80:80"
+      - "80-81:80"
       labels:
       - 'com.centurylinklabs.watchtower.enable=true'
     development:
@@ -16,22 +17,9 @@ services:
       pull_policy: always
       restart: always
       ports:
-        - "8000:80"
-      labels:
-        - 'com.centurylinklabs.watchtower.enable=true'
-    local_public_html_build:
-      build: .
-      container_name: local_public_html_build
-      restart: always
-      ports:
       - "8080:80"
       volumes:
       - ./public_html/:/usr/local/apache2/htdocs/
-    local_app_build:
-      build: ./app
-      container_name: app
-      volumes:
-        - ./requirements.txt:/home/myuser/requirements.txt
     watchtower:
       image: containrrr/watchtower
       container_name: watchtower
